--- a/ex1/index.html
+++ b/ex1/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise 1</title>
 </head>
 <body>
-    
+    <form action="" class="form-id">
+        <fieldset>
+            <legend>Insert word then press enter</legend>
+            <label for="word">Word</label>
+            <input id="word" type="text">
+        </fieldset>
+    </form>
 </body>
+<script src="exercise1.js"></script>
 </html>
